fix: hide the scrollbar in base page

--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -1,5 +1,6 @@
 html {
   font-size: 14px;
+  overflow: hidden;
 }
 
 body {
